--- a/learning/learning.cabal
+++ b/learning/learning.cabal
@@ -21,9 +21,9 @@ library
 
 test-suite tests
     build-depends: base
-                 , Hw01
                  , hspec ==2.*
                  , HUnit
+                 , learning
                  , QuickCheck
     default-language: Haskell2010
     ghc-options: -fhpc
@@ -36,7 +36,7 @@ test-suite tests
 
 executable hw01
     build-depends: base
-                 , Hw01
+                 , learning
     default-language: Haskell2010
     ghc-prof-options: -auto-all
                       -prof
